--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -13,6 +13,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 200px;
 }
 .portfolio-title{
     color: black;
@@ -41,4 +42,18 @@ nav  a{
     font-weight: normal;
     color: aliceblue;
     padding: 15px 35px;
+}
+
+.header{
+    background: #FFF8F3;
+}
+
+.banner{
+     padding:30px 30px 30px 150px; 
+     display: flex;
+     align-items: center;
+}
+
+.banner .profilepic{
+    width:600px
 }
