--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -1,10 +1,10 @@
-.text-primary{
+.text-primary {
     color: #FD6E0A;
 }
 
 
 /* common shared styles*/
-body{
+body {
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -15,26 +15,29 @@ nav {
     justify-content: space-between;
     margin: 0 200px;
 }
-.portfolio-title{
+
+.portfolio-title {
     color: black;
     font-size: 45px;
     font-weight: 800;
 }
-nav > ul{
+
+nav>ul {
     display: flex;
     align-items: center;
 }
 
-nav li{
-   list-style: none;
-   margin-right: 50px;
+nav li {
+    list-style: none;
+    margin-right: 50px;
 }
 
-nav  a{
+nav a {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.808)
 }
-.btn-primary{
+
+.btn-primary {
     border-radius: 5px;
     background-color: #FD6E0A;
     border: 0;
@@ -44,81 +47,151 @@ nav  a{
     padding: 15px 35px;
 }
 
-.header{
+.header {
     background: #FFF8F3;
     background-image: url(https://img.freepik.com/free-vector/wavy-background-with-copy-space_52683-65230.jpg?w=1380&t=st=1688832161~exp=1688832761~hmac=220ff94e4ff6985b4c62f64b697d607226a1395146157f6976005f2d4bbddf9f);
     background-repeat: no-repeat;
     background-position: bottom right;
 }
 
-.banner{
-     padding:30px 30px 0px 150px; 
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
+.banner {
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.banner .profilepic{
-    width:600px
-}
-.banner-content{
-     max-width: 700px; 
+.banner .profilepic {
+    width: 600px
 }
 
-.banner-ruff{
+.banner-content {
+    max-width: 700px;
+}
+
+.banner-ruff {
     font-size: 45px;
     color: #474747;
     margin-bottom: 0;
 }
-.banner-ill{
+
+.banner-ill {
     font-size: 85px;
     font-weight: 700;
     margin-top: 5px;
     margin-bottom: 20px;
 }
 
-.about{
-    padding:130px;
+.about {
+    padding: 130px;
     border-radius: 10px;
     background-color: #FFF8F3;
     margin: 130px 0;
 
 }
-.section-title{
+
+.section-title {
     color: #181818;
     text-align: center;
     font-size: 35px;
     font-weight: 700;
 }
-.section-des{
+
+.section-des {
     color: #757575;
     text-align: center;
     font-size: 18px;
 }
 
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
-    
+
 }
-.info-des{
+
+.info-des {
     font-size: medium;
 }
 
-.info-title{
+.info-title {
     font-weight: 200;
     font-size: 24px;
 }
 
-.about-info{
+.about-info {
     text-align: center;
 }
 
-#what{
-    padding:30px 150px;
-    
+#what {
+    padding: 30px 150px;
+
+}
+
+.skills {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+
+
+}
+
+.skills-container {
+    gap: 24px;
+    display: flex;
+    width: 800px;
+
+}
+
+.skill-des {
+    color: #757575;
+
+}
+
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-container {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-institute,
+.resume-item-description {
+    color: #757575;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+
+}
+
+resume-container hr {
+    margin: 30px;
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
+.footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
 }
